--- a/sources/ARES/package.json
+++ b/sources/ARES/package.json
@@ -21,7 +21,7 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
-    "@ionic-native/camera": "4.3.3",
+    "@ionic-native/camera": "^4.3.3",
     "@ionic-native/contacts": "^4.7.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/email-composer": "^4.7.0",
@@ -32,8 +32,10 @@
     "@ionic/storage": "2.1.3",
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
+    "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
     "cordova-ios": "4.5.4",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-email-composer": "^0.8.15",
     "cordova-plugin-geolocation": "^4.0.1",
@@ -44,6 +46,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
+    "ionic-native": "latest",
     "ionicons": "3.0.0",
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
@@ -51,7 +54,8 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
-    "typescript": "~2.6.2"
+    "typescript": "~2.6.2",
+    "ionic-native": "latest"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -69,7 +73,8 @@
         "API_KEY_FOR_IOS": "AIzaSyDtwp7UiXxFOOBJOhh4E6Go1Gu8JRmfG58",
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "This app wants to get your location while this app runs only.",
         "LOCATION_ALWAYS_USAGE_DESCRIPTION": "This app wants to get your location always, even this app runs in background."
-      }
+      },
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "ios",
