--- a/sources/ARES/package.json
+++ b/sources/ARES/package.json
@@ -39,7 +39,7 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-email-composer": "^0.8.15",
     "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-googlemaps": "^2.3.4",
+    "cordova-plugin-googlemaps": "^2.3.5",
     "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git#2.7.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
@@ -48,8 +48,10 @@
     "ionic-angular": "3.9.2",
     "ionic-native": "latest",
     "ionicons": "3.0.0",
+    "minimist": "^1.2.0",
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
+    "xml2js": "^0.4.19",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
