--- a/sources/ARES/package.json
+++ b/sources/ARES/package.json
@@ -27,8 +27,8 @@
     "@ionic-native/email-composer": "^4.7.0",
     "@ionic-native/geolocation": "^4.7.0",
     "@ionic-native/google-maps": "^4.8.2",
-    "@ionic-native/splash-screen": "4.7.0",
-    "@ionic-native/status-bar": "4.7.0",
+    "@ionic-native/splash-screen": "^4.7.0",
+    "@ionic-native/status-bar": "^4.7.0",
     "@ionic/storage": "^2.1.3",
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
@@ -44,6 +44,7 @@
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.2",
     "ionic-angular": "3.9.2",
@@ -78,7 +79,8 @@
         "LOCATION_ALWAYS_USAGE_DESCRIPTION": "This app wants to get your location always, even this app runs in background."
       },
       "cordova-plugin-camera": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "ios",
