--- a/sources/ARES/package.json
+++ b/sources/ARES/package.json
@@ -72,17 +72,21 @@
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
       "cordova-plugin-email-composer": {},
+      "cordova-plugin-camera": {},
+      "cordova-sqlite-storage": {},
       "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyDtwp7UiXxFOOBJOhh4E6Go1Gu8JRmfG58",
         "API_KEY_FOR_IOS": "AIzaSyDtwp7UiXxFOOBJOhh4E6Go1Gu8JRmfG58",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "26.1.0",
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "This app wants to get your location while this app runs only.",
         "LOCATION_ALWAYS_USAGE_DESCRIPTION": "This app wants to get your location always, even this app runs in background."
-      },
-      "cordova-plugin-camera": {},
-      "cordova-sqlite-storage": {}
+      }
     },
     "platforms": [
       "ios",
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
