--- a/sources/ARES/package.json
+++ b/sources/ARES/package.json
@@ -82,14 +82,19 @@
         "ANDROID_SUPPORT_V4_VERSION": "26.1.0",
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "This app wants to get your location while this app runs only.",
         "LOCATION_ALWAYS_USAGE_DESCRIPTION": "This app wants to get your location always, even this app runs in background."
-      }
       },
       "cordova-plugin-statusbar": {}
     },
+    "cordova-plugin-statusbar": {},
     "platforms": [
       "ios",
       "browser",
       "android"
     ]
-  }
+  },
+  "platforms": [
+    "ios",
+    "browser",
+    "android"
+  ]
 }
